<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/action_settings" >

    <PreferenceCategory
        android:title="@string/settings_category_ui"
        android:layout="@layout/preference_category" >

        <CheckBoxPreference
            android:title="@string/settings_title_weather_icon_position"
            android:key="@string/key_weather_icon_position"
            android:summaryOn="@string/settings_weather_icon_position_on"
            android:summaryOff="@string/settings_weather_icon_position_off" />

        <CheckBoxPreference
            android:title="@string/settings_title_navigationBar_color"
            android:key="@string/key_navigationBar_color"
            android:summaryOn="@string/settings_navigationBar_color_on"
            android:summaryOff="@string/settings_navigationBar_color_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_forecast"
        android:layout="@layout/preference_category" >

        <CheckBoxPreference
            android:title="@string/settings_title_forecast_today"
            android:key="@string/key_forecast_today"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off" />

        <Preference
            android:title="@string/settings_title_forecast_today_time"
            android:key="@string/key_forecast_today_time" />

        <ListPreference
            android:title="@string/settings_title_forecast_today_type"
            android:key="@string/key_forecast_today_type"
            android:entries="@array/forecast_types"
            android:entryValues="@array/forecast_type_values"
            android:defaultValue="simple_forecast"
            android:dialogTitle="@string/settings_title_forecast_today_type" />

        <CheckBoxPreference
            android:title="@string/settings_title_forecast_tomorrow"
            android:key="@string/key_forecast_tomorrow"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off" />

        <Preference
            android:title="@string/settings_title_forecast_tomorrow_time"
            android:key="@string/key_forecast_tomorrow_time" />

        <ListPreference
            android:title="@string/settings_title_forecast_tomorrow_type"
            android:key="@string/key_forecast_tomorrow_type"
            android:entries="@array/forecast_types"
            android:entryValues="@array/forecast_type_values"
            android:defaultValue="simple_forecast"
            android:dialogTitle="@string/settings_title_forecast_tomorrow_type" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_widget"
        android:layout="@layout/preference_category" >

        <ListPreference
            android:title="@string/settings_title_widget_refresh_time"
            android:key="@string/key_widget_refresh_time"
            android:entries="@array/refresh_times"
            android:entryValues="@array/refresh_time_values"
            android:dialogTitle="@string/settings_title_widget_refresh_time"
            android:defaultValue="2hours" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_notification"
        android:layout="@layout/preference_category" >

        <CheckBoxPreference
            android:title="@string/settings_title_notification"
            android:key="@string/key_notification"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off" />

        <ListPreference
            android:title="@string/settings_title_notification_text_color"
            android:key="@string/key_notification_text_color"
            android:entries="@array/notification_text_colors"
            android:entryValues="@array/notification_text_color_values"
            android:dialogTitle="@string/settings_title_notification_text_color"
            android:defaultValue="grey" />

        <CheckBoxPreference
            android:title="@string/settings_title_notification_background"
            android:key="@string/key_notification_background"
            android:summaryOn="@string/settings_notification_background_on"
            android:summaryOff="@string/settings_notification_background_off" />

        <CheckBoxPreference
            android:title="@string/settings_title_notification_can_be_cleared"
            android:key="@string/key_notification_can_be_cleared"
            android:summaryOn="@string/settings_notification_can_be_cleared_on"
            android:summaryOff="@string/settings_notification_can_be_cleared_off" />

        <CheckBoxPreference
            android:title="@string/settings_title_notification_hide_icon"
            android:key="@string/key_notification_hide_icon"
            android:summaryOn="@string/settings_notification_hide_icon_on"
            android:summaryOff="@string/settings_notification_hide_icon_off" />

        <CheckBoxPreference
            android:title="@string/settings_title_notification_hide_in_lockScreen"
            android:key="@string/key_notification_hide_in_lockScreen"
            android:summaryOn="@string/settings_notification_hide_in_lockScreen_on"
            android:summaryOff="@string/settings_notification_hide_in_lockScreen_off" />

        <CheckBoxPreference
            android:title="@string/settings_title_notification_auto_refresh"
            android:key="@string/key_notification_auto_refresh"
            android:summaryOn="@string/settings_notification_auto_refresh_on"
            android:summaryOff="@string/settings_notification_auto_refresh_off" />

        <ListPreference
            android:title="@string/settings_title_notification_refresh_time"
            android:key="@string/key_notification_refresh_time"
            android:entries="@array/refresh_times"
            android:entryValues="@array/refresh_time_values"
            android:dialogTitle="@string/settings_title_notification_refresh_time"
            android:defaultValue="2hours" />

        <CheckBoxPreference
            android:title="@string/settings_title_notification_sound"
            android:key="@string/key_notification_sound"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off" />

        <CheckBoxPreference
            android:title="@string/settings_title_notification_shock"
            android:key="@string/key_notification_shock"
            android:summaryOn="@string/on"
            android:summaryOff="@string/off" />

    </PreferenceCategory>

</PreferenceScreen>